--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,20 @@
 <resources>
     <string name="hello">Hello World, MarinedbActivity!</string>
     <string name="app_name">海相系统</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="btn_single">单选</string>
+    <string name="btn_mutiple">多选</string>
+    <string name="btn_frame">框选</string>
+    <string name="btn_line">折线</string>
+    <string name="btn_polygon">多边形</string>
+    <string name="btn_cur_screen">屏幕范围</string>
+    
+    <string name="btn_tool">工具</string>
+    <string name="btn_count">统计</string>
+    <string name="btn_compare">对比</string>
+    <string name="btn_mine">我的</string>
+    <string name="btn_layout">图层</string>
+
+    
+    <string name="btn_tool_title">工具子菜单项</string>
 </resources>
