--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="btn_compare">对比</string>
     <string name="btn_mine">我的</string>
     <string name="btn_layout">图层</string>
+    <string name="btn_confirm">确认</string>
 
     
     <string name="btn_tool_title">工具子菜单项</string>
