--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="layer_name">图层名称</string>
     <string name="layer_show">是否显示</string>
     <string name="layer_current">设为当前图层</string>
+    <string name="search_loading">正在查询...</string>
 </resources>
