1、长按查出数据；2、蓝色球体只在  长按 操作下才显示

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="layer_show">是否显示</string>
     <string name="layer_current">设为当前图层</string>
     <string name="search_loading">正在查询...</string>
+    <string name="search_no_result">抱歉，没有结果</string>
 </resources>
