--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -43,4 +43,18 @@
     <string name="layer_current">设为当前图层</string>
     <string name="search_loading">正在查询...</string>
     <string name="search_no_result">抱歉，没有结果</string>
+    
+    <string name="url_oilreservoirs">http://202.204.193.201:6080/arcgis/rest/services/oilreservoirs/MapServer</string>
+    <string name="url_gasreservoirs">http://202.204.193.201:6080/arcgis/rest/services/gasreservoirs/MapServer</string>
+    <string name="url_well">http://202.204.193.201:6080/arcgis/rest/services/well/MapServer</string>
+    <string name="url_oilfields">http://202.204.193.201:6080/arcgis/rest/services/oilfields/MapServer</string>
+    <string name="url_gasfields">http://202.204.193.201:6080/arcgis/rest/services/gasfields/MapServer</string>
+    <string name="url_basin">http://202.204.193.201:6080/arcgis/rest/services/basin/MapServer</string>
+
+    <!-- 基础地理 -->
+    <string name="url_marine_geo">http://202.204.193.201:6080/arcgis/rest/services/marine_geo/MapServer</string>
+    <!-- 卫星图 -->
+    <string name="url_marine_image">http://202.204.193.201:6080/arcgis/rest/services/marine_image/MapServer</string>
+    <!-- 不显示，也不添加到mapview,搜索用-->
+    <string name="url_marine_oil">http://202.204.193.201:6080/arcgis/rest/services/marine_oil/MapServer</string>
 </resources>
