--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="layer_current">设为当前图层</string>
     <string name="search_loading">正在查询...</string>
     <string name="search_no_result">抱歉，没有结果</string>
+    <string name="search_no_data">暂时没有数据</string>
     <string name="tip_no_objects">您还未选择对比目标</string>
     <string name="clear_history">清空搜索历史记录</string>
     
