--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -50,6 +50,14 @@
     <string name="clear_history">清空搜索历史记录</string>
     <string name="user_cancel_search">您已取消本次查询</string>
     
+    <string name="user_login_title">登陆</string>
+    <string name="user_login_dialog_ok">确定</string>
+    <string name="user_login_dialog_cancel">取消</string>
+    <string name="user_login_username">用户名</string>
+    <string name="user_login_userpwd">密码</string>
+    <string name="user_login_username_hint">请填写用户名</string>
+    <string name="user_login_userpwd_hint">请填写密码</string>
+    
     <!--  油藏-->
     <string name="url_oilreservoirs">http://10.200.250.110:6080/arcgis/rest/services/oilreservoirs/MapServer</string>
     <!-- 气藏-->
